--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
+    "react-resizable-panels": "^2.1.7",
+    "react-router": "^7.1.5",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
